Kubernetes Project/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: simple-blog-api
          image: ashaanna/blog_api
          ports:
            - containerPort: 3000
          resources:
            limits:
                memory: "128Mi"
                cpu: "500m"
